--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
   "name": "exercises-sync-async",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "src/index.js",
   "license": "MIT",
   "scripts": {
-    "test": "jest"
+    "test": "jest",
+    "test:evaluation": "jest --json --outputFile=/tmp/result.json"
   },
   "author": "ED Team",
   "dependencies": {
